# sed.i

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  Makefile  README.md  docker-compose.yml
content-queue-backend/: .env.example  .pre-commit-config.yaml  Procfile  nixpacks.celery.toml  nixpacks.toml  pyproject.toml  start-celery.sh
content-queue-backend/alembic/versions/: 008_add_search_vector_to_highlights.py  009_add_content_chunks_table.py  00b660c6eedb_add_drafts_table.py  010_add_tag_embeddings.py  011_add_reading_clusters.py  012_add_refresh_tokens.py  013_merge_heads.py  014958e5_entity_lower_name_index.py  0249ceae48ac_add_entity_graph_tables.py  2a9a20f7af56_add_s3_key_to_content_items.py  5534fbac2811_add_unique_constraint_content_url.py  9377e6bfc72e_merge_heads_entities_analyzed_at_and_.py  a1b2c3d4e5f6_add_search_vector_to_content_items.py  a3f1e8b2c7d9_add_hnsw_index_on_entities_embedding.py  b2c3d4e5f6a7_add_persistent_gaps_to_user_profiles.py  b5c2f1d8e4a6_add_entities_analyzed_at_to_content_items.py  b683b1898f35_add_unique_constraint_to_entity_.py  bfd370190a2a_add_tag_type_to_tag_embeddings.py  c1d2e3f4a5b6_add_research_memory.py  c3d4e5f6a1b2_add_user_memory_tables.py  d1e2f3a4b5c6_refactor_user_profile_memory_text.py  d3e4f5a6b7c8_add_fk_research_runs_user_id.py  e3f7a2c9b1d4_add_full_text_to_search_vector.py  e4f5a6b7c8d9_merge_memory_and_entity_heads.py  f5fa4cf4c67f_add_research_runs.py  f76159fa41d4_merge_heads.py
content-queue-backend/app/: main.py
content-queue-backend/app/api/: analytics.py  auth.py  content.py  drafts.py  highlights.py  lists.py  memory.py  research.py  search.py  themes.py  vinyl.py
content-queue-backend/app/api/endpoints/: public.py
content-queue-backend/app/core/: celery_app.py  config.py  database.py  deps.py  embedding_cache.py  entity_graph.py  hybrid_search.py  llm_client.py  llm_schemas.py  observability.py  request_router.py  search_router.py  security.py  storage.py
content-queue-backend/app/mcp/: auth.py  db.py  http_server.py  oauth.py  server.py  skills.py
content-queue-backend/app/mcp/tools/: content.py  drafts.py  highlights.py  lists.py  (+5 more)
content-queue-backend/app/middleware/: rate_limit.py
content-queue-backend/app/models/: __init__.py  chunk.py  content.py  draft.py  entity.py  highlight.py  memory.py  reading_cluster.py  refresh_token.py  research.py  research_memory.py  tag_embedding.py  user.py
content-queue-backend/app/schemas/: content.py  draft.py  research.py  user.py
content-queue-backend/app/services/: content.py
content-queue-backend/app/tasks/: _yolo_worker.py  article_analysis.py  base.py  chunk_embeddings.py  cleanup.py  clustering.py  discogs.py  embedding.py  entity_backfill.py  entity_dedup.py  entity_embedding.py  entity_extraction.py  extraction.py  extraction_implementations.py  memory.py  research.py  research_memory.py  summarization.py  tagging.py
content-queue-backend/app/workflows/: ingestion.py
content-queue-backend/scripts/: backfill_entity_extraction.py  dev_worker.sh  post_deploy.py  reset_backend_env.sh  run_entity_dedup.py  run_evals.py
content-queue-backend/tests/: conftest.py  test_article_analysis.py  test_auth_api.py  test_chunk_embeddings.py  test_clustering.py  test_connections_api.py  test_content_api.py  test_content_extended.py  test_embedding_cache.py  test_entity_embedding.py  test_entity_extraction.py  test_entity_search_e2e.py  test_ephemeral_reader.py  test_extraction_utils.py  test_golden_paths.py  test_highlight_connections.py  test_highlight_search.py  test_insight_endpoint.py  test_memory_api.py  test_memory_models.py  test_memory_skills_integration.py  test_memory_task.py  test_rate_limiter.py  test_relevant_reads.py  test_request_router.py  test_research_api.py  test_research_tasks.py  test_search_api.py  test_similar_api.py  test_tagging.py
content-queue-backend/tests/evals/: baselines.json  conftest.py  mcp_eval_dataset.py  retrieval_eval_dataset.py  scoring.py  search_eval_dataset.py  tagging_eval_dataset.py  test_mcp_evals.py  test_retrieval_evals.py  test_search_evals.py  test_tagging_evals.py
content-queue-backend/tests/mcp/: conftest.py  test_content_tools.py  test_drafts_tools.py  test_highlights_tools.py  test_hybrid_search.py  test_keyword_search.py  test_lists_tools.py  test_mcp_auth_middleware.py  test_oauth.py  test_query_library.py  test_search_router.py  test_skills.py  test_stats_tools.py  test_summarize_tools.py  test_synthesis_tools.py  test_write_tools.py
infra/: .gitignore  Pulumi.yaml  README.md  __main__.py  pyproject.toml
(+270 files in other folders)
