[project]
name = "content-queue-backend"
version = "0.4.0"
description = "Content Queue API"
authors = [
    {name = "enpuyou",email = "enpuyou@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg[binary] (>=3.2.3,<4.0.0)",
    "alembic (>=1.18.0,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "openai (>=2.15.0,<3.0.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "yt-dlp (>=2025.12.8,<2026.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (==4.0.1)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "slowapi (>=0.1.9) ; python_version >= \"3.11\" and python_version < \"4.0\"",
    "tiktoken (>=0.12.0,<0.13.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "opencv-python-headless (>=4.8.0,<5.0.0)",
    "pillow (>=10.0.0,<11.0.0)",
    "pymupdf-layout (==1.27.1)",
    "onnxruntime (==1.23.2)",
    "numpy (>=2.0.0,<3.0.0)",
    "torch (==2.6.0) ; sys_platform == \"linux\"",
    "torch (==2.6.0) ; sys_platform == \"darwin\" and platform_machine == \"arm64\"",
    "torch (==2.2.2) ; sys_platform == \"darwin\" and platform_machine == \"x86_64\"",
    "torchvision (==0.21.0) ; sys_platform == \"linux\"",
    "torchvision (==0.21.0) ; sys_platform == \"darwin\" and platform_machine == \"arm64\"",
    "torchvision (==0.17.2) ; sys_platform == \"darwin\" and platform_machine == \"x86_64\"",
    "ultralytics (>=8.0.0,<9.0.0)",
    "huggingface-hub (>=0.20.0,<1.0.0)",
    "posthog (>=3.0.0,<4.0.0)",
    "mcp (>=1.13.1,<2.0.0)",
    "braintrust (>=0.22.0,<0.23.0)",
    "opentelemetry-sdk (>=1.42.1,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.63b1,<0.64)",
    "opentelemetry-instrumentation-sqlalchemy (>=0.63b1,<0.64)",
    "opentelemetry-instrumentation-celery (>=0.63b1,<0.64)",
    "opentelemetry-exporter-otlp-proto-http (>=1.42.1,<2.0.0)",
    "sentry-sdk[fastapi] (>=2.60.0,<3.0.0)",
    "boto3 (>=1.43.13,<2.0.0)",
    "prefect (>=3.0.0,<4.0.0)",
    "sqlglot (>=25.0.0,<26.0.0)",
    "instructor (>=1.7.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

# torch and torchvision are sourced from the official PyTorch CPU-only wheel
# index (explicit priority = only these two packages fetch from this source).
# This avoids CUDA-only wheels from PyPI that have incompatible ABI tags on
# standard Linux deploy environments.
[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
torch = [
    {version = "==2.6.0", source = "pytorch-cpu", markers = "sys_platform == 'linux'"},
    {version = "==2.6.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
    {version = "==2.2.2", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'"},
]
torchvision = [
    {version = "==0.21.0", source = "pytorch-cpu", markers = "sys_platform == 'linux'"},
    {version = "==0.21.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
    {version = "==0.17.2", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'"},
]

[tool.pytest.ini_options]
# Disable xdist by default — tests share one DB and parallel TRUNCATEs conflict.
# Run a single file fast with: pytest tests/test_foo.py
addopts = "-p no:xdist"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
httpx = ">=0.28.1,<0.29.0"
black = ">=25.12.0,<26.0.0"
ruff = ">=0.14.11,<0.15.0"
pre-commit = ">=4.5.1,<5.0.0"
psycopg2-binary = "^2.9.11"
python-dotenv = ">=1.2.1,<2.0.0"
