[project]
name = "sedi-infra"
version = "0.1.0"
description = "sed.i AWS infrastructure"
authors = [
    {name = "enpuyou",email = "youenpu@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pulumi (>=3.0.0,<4.0.0)",
    "pulumi-aws (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
